--- a/public/index.html
+++ b/public/index.html
@@ -74,7 +74,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>🎨 User Color Manager</h1>
+        <h1>🎨 User Color Manager - Updated!</h1>
         <div id="users"></div>
     </div>
 
