Add 🍽️ to title

--- a/public/index.html
+++ b/public/index.html
@@ -130,7 +130,7 @@
 </head>
 <body>
     <div class="container">
-<h1>🍽️ Palestinian Restaurant Finder</h1>        <p class="subtitle">Find the best restaurant for your favorite meal!</p>
+<h1>🍽️  Palestinian Restaurant Finder 🍽️ </h1>        <p class="subtitle">Find the best restaurant for your favorite meal!</p>
         
         <div class="search-box">
             <label for="cuisine">What's your favorite meal?</label>
