--- a/public/index.html
+++ b/public/index.html
@@ -142,8 +142,7 @@
     </div>
 
     <script>
-        const API_URL = 'http://localhost:3000/api';
-
+const API_URL = `http://${window.location.hostname}:3000/api`;
         async function searchRestaurants() {
             const cuisine = document.getElementById('cuisine').value.trim();
             const resultsDiv = document.getElementById('results');
